service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suncav-app-service
spec:
  selector:
    app: suncav-app
  ports:
    - port: 8080
      targetPort: 8080
