route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: suncav-app-route
spec:
  to:
    kind: Service
    name: suncav-app-service
  port:
    targetPort: 8080
